# HPGe-Detector-Simulation-with-Geant4

./: CMakeLists.txt  README.md  placute.mac  run.mac  sim.cc  vis.mac
include/: action.hh  construction.hh  detector.hh  event.hh  generator.hh  physics.hh  run.hh  stepping.hh
src/: ActionInitialization.cc  action.cc  construction.cc  detector.cc  event.cc  generator.cc  physics.cc  run.cc  stepping.cc
